Test/typing/should_fail/attr_final_volatile.java
package tutu.titi.toto;

class A {

    volatile final int var;

}
